ADD: scroll animation / portfolio / minor

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -5,3 +5,4 @@
 @import "../modules/about/chat";
 @import "../modules/about/tabs";
 @import "../modules/services/services";
+@import "../modules/portfolio/portfolio";
