--- a/src/views/index.html
+++ b/src/views/index.html
@@ -54,11 +54,12 @@
         <main class="main">
             @include('../modules/about/about.html')
             @include('../modules/services/services.html')
+            @include('../modules/portfolio/portfolio.html')
         </main>
 
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
         <script src="js/import/modernizr-webp.js"></script>
         <script type="module" src="js/import/translate.js"></script>
-        <script src="js/main.js"></script>
+        <script defer src="js/main.js"></script>
     </body>
 </html>
