--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -16,6 +16,10 @@ p {
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Gilroy", sans-serif;
     color: $white;
