--- a/src/views/index.html
+++ b/src/views/index.html
@@ -55,6 +55,7 @@
             @include('../modules/about/about.html')
             @include('../modules/services/services.html')
             @include('../modules/portfolio/portfolio.html')
+            @include('../modules/reasons/reasons.html')
         </main>
 
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
