--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -6,3 +6,4 @@
 @import "../modules/about/tabs";
 @import "../modules/services/services";
 @import "../modules/portfolio/portfolio";
+@import "../modules/reasons/reasons";
