ADD: full preloader

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -44,7 +44,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/favicon-180x180.png">
         <!-- IOS -->
 
-
+        <link rel="preload" href="js/import/preloader.js" as="script">
         <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body class="body">
@@ -63,6 +63,7 @@
         <!-- https://vk.com/@vk_it-webp?t2fs=232db2370e4cfe3c00_3 -->
         <script src="js/import/modernizr-webp.js"></script>
         <script type="module" src="js/import/translate.js"></script>
+        <script src="js/import/preloader.js"></script>
         <script defer src="js/main.js"></script>
     </body>
 </html>
