--- a/src/modules/preloader/_preloader.scss
+++ b/src/modules/preloader/_preloader.scss
@@ -1,6 +1,24 @@
-#preloader {
+#svg-animation {
+    display: none !important;
     position: fixed;
-    z-index: 1000;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: $black;
+
+    svg {
+        width: 100%;
+        height: 95vh;
+    }
+}
+
+#preloader {
+    display: none !important;
+    position: fixed;
+    z-index: 998;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +33,11 @@
 
 .preloader-hidden {
     opacity: 0 !important;
-    transition: all 0.2s;
+    transition: all 0.3s;
+}
+
+.preloader-after-hidden {
+    opacity: 0 !important;
 }
 
 @keyframes preloader-rotate {
