--- a/src/views/index.html
+++ b/src/views/index.html
@@ -48,8 +48,8 @@
         <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body class="body">
-        <div class="scroll">
-            @include('../modules/preloader/preloader.html')
+        @include('../modules/preloader/preloader.html')
+        <div id="scroll" class="scroll">
             @include('../modules/nav/nav.html')
             @include('../modules/header/header.html')
             <main class="main">
