--- a/src/modules/reasons/reasons.scss
+++ b/src/modules/reasons/reasons.scss
@@ -6,10 +6,10 @@
         align-items: center;
         margin-bottom: 48px;
         color: $white;
+    }
 
-        span {
-            color: $violet;
-        }
+    &__highlighted {
+        color: $violet;
     }
 
     &__sum {
