--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -117,6 +117,10 @@ a {
     max-width: $container-width;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 .centered {
     text-align: center;
 }
@@ -153,7 +157,10 @@ a {
 }
 
 .buttonSmallText {
+    @include adaptiveFont(18, 22, 320, 1440);
 
+    font-weight: 600;
+    line-height: 160%;
 }
 
 .text16 {
@@ -171,4 +178,71 @@ a {
 .text24 {
     font-weight: 500;
     font-size: 24px;
+}
+
+.title-parent {
+    overflow: hidden;
+
+    // cause scroll animation
+    opacity: 1 !important;
+}
+
+.title-animation {
+    display: inline-block;
+    transform: translateY(100%);
+
+    &[data-queue="1"] {
+        transition-delay: 0ms;
+    }
+
+    &[data-queue="2"] {
+        transition-delay: 200ms;
+    }
+
+    &[data-queue="3"] {
+        transition-delay: 400ms;
+    }
+
+    &[data-queue="4"] {
+        transition-delay: 600ms;
+    }
+
+    &[data-queue="5"] {
+        transition-delay: 800ms;
+    }
+
+    &[data-queue="6"] {
+        transition-delay: 1000ms;
+    }
+
+    &[data-queue="7"] {
+        transition-delay: 1200ms;
+    }
+
+    &[data-queue="8"] {
+        transition-delay: 1400ms;
+    }
+
+    &[data-queue="9"] {
+        transition-delay: 1600ms;
+    }
+
+    &[data-queue="10"] {
+        transition-delay: 1800ms;
+    }
+
+    &--isIntersecting {
+        transform: translateY(0%);
+        transition: all 1s;
+    }
+}
+
+.animation-button {
+    opacity: 0;
+
+    &--isActive {
+        opacity: 1 !important;
+        transition: all 0.5s !important;
+        transition-delay: 1000ms !important;
+    }
 }
