--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,4 +1,6 @@
 $container-offset: 84px;
+$container320-offset: 12px;
+$container1020-offset: 35px;
 $container-width: 100vw;
 $black: #181818;
 $white: #FCF7FF;
