--- a/src/modules/portfolio/portfolio.scss
+++ b/src/modules/portfolio/portfolio.scss
@@ -2,6 +2,10 @@
     overflow-x: hidden;
     padding-top: 110px;
 
+    .button p {
+        margin-right: 0;
+    }
+
     &__title {
         color: $white;
     }
@@ -26,7 +30,6 @@
 
         img {
             width: 100%;
-            // height: 30vh;
         }
     }
 
@@ -69,4 +72,21 @@
 
 .main3 {
     grid-area: main3;
+}
+
+@media (max-width: 766px) {
+    .portfolio {
+        &__grid {
+            grid-gap: 8px;
+            grid-template: 1fr 1fr 1fr 1fr 1fr 1fr / calc(50% - 4px) calc(50% - 4px);
+            grid-template-areas:
+                "main1 main1"
+                "sub3 sub2"
+                "main2 main2"
+                "sub1 sub4"
+                "main3 main3"
+                "sub5 sub6";
+            margin: 12px 0;
+        }
+    }
 }
