--- a/src/modules/reasons/reasons.scss
+++ b/src/modules/reasons/reasons.scss
@@ -23,4 +23,110 @@
         height: 90px;
         background-color: $violet;
     }
+
+    &__headers--mobile {
+        display: none;
+    }
+
+    &__grid {
+        display: grid;
+        grid-gap: 64px 24px;
+        grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    }
+
+    &__item {
+        button {
+            margin-top: 18px;
+        }
+    }
+
+    &__header {
+        @include adaptiveFont(17, 24, 320, 1440);
+
+        margin-bottom: 12px;
+        -webkit-text-stroke-width: 0.8px;
+        -webkit-text-stroke-color: $violet;
+        color: $black;
+    }
+
+    &__reason {
+        margin-bottom: 12px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .reasons {
+        &__grid {
+            grid-gap: 24px;
+            grid-template: 1fr 1fr 1fr / 1fr 1fr;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .reasons {
+        &__headers--mobile {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        &__grid {
+            position: relative;
+            overflow-x: hidden;
+            margin-top: 8px;
+
+            .reasons__header {
+                display: none;
+            }
+        }
+
+        &__item {
+            position: absolute;
+            left: 0;
+            top: 0;
+            transform: translateX(100%);
+            transition: transform 0.2s;
+
+            &--isActive {
+                transform: translateX(0%) !important;
+                transition: transform 0.2s;
+            }
+
+            &--isLeft {
+                transform: translateX(-100%);
+                transition: transform 0.2s;
+            }
+        }
+
+        &__header {
+            flex-grow: inherit;
+            -webkit-text-stroke-width: 0.8px;
+            -webkit-text-stroke-color: #2F1C63;
+            color: $black;
+            transition: all 0.3s;
+
+            &--isActive {
+                flex-grow: 0.5;
+                -webkit-text-stroke-width: 0.8px;
+                -webkit-text-stroke-color: $violet;
+                color: $black;
+                transition: all 0.3s;
+            }
+        }
+    }
+}
+
+@media (max-width: 603px) {
+    .reasons {
+        &__title {
+            align-items: flex-start;
+        }
+
+        &__sum {
+            padding: 19px 26px;
+            width: 25%;
+            height: 50%;
+        }
+    }
 }
