--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -47,7 +47,7 @@
         }
 
         &[data-services="app"] {
-            width: 30% !important;
+            width: 30%;
         }
     }
 
@@ -62,15 +62,19 @@
         }
     }
 
-    &__price {
+    &__info {
         .text24 {
             &:not(:nth-child(2)) {
                 margin-bottom: 4px;
             }
 
-            span {
+            .services__question {
                 display: inline-block;
                 width: 194px;
+            }
+
+            br {
+                display: none;
             }
         }
 
@@ -83,6 +87,99 @@
 
                 &:visited {
                     color: $violet;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .services {
+        flex-direction: column;
+
+        &__about {
+            flex-direction: column;
+        }
+
+        &__do {
+            margin-bottom: 24px;
+            width: 100%;
+        }
+
+        &__item {
+            padding: 32px 24px;
+        }
+
+        &__image {
+            width: 85%;
+
+            img {
+                margin: 0 auto;
+                width: 100%;
+            }
+
+            &[data-services="app"] {
+                width: 75%;
+            }
+        }
+
+        &__footer {
+            flex-direction: column;
+        }
+
+        &__info {
+            display: flex;
+            flex-flow: wrap;
+
+            .text24 {
+                width: 50%;
+
+                span {
+                    display: inline-block;
+                    width: 194px;
+                    text-align: left;
+                }
+
+                br {
+                    display: inline;
+                }
+
+                &:nth-child(2) {
+                    text-align: right;
+                }
+            }
+
+            .text16 {
+                margin-top: 24px;
+                margin-bottom: 24px;
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .services {
+        &__image {
+            width: 100%;
+        }
+
+        &__info {
+            flex-direction: column;
+
+            .text24 {
+                width: 100%;
+
+                br {
+                    display: none;
+                }
+
+                span {
+                    display: inline !important;
+                }
+
+                &:nth-child(2) {
+                    text-align: left;
                 }
             }
         }
