--- a/src/scss/base/_settings.scss
+++ b/src/scss/base/_settings.scss
@@ -140,6 +140,15 @@ a {
     line-height: 40px;
 }
 
+.h4 {
+    @include adaptiveFont(24, 32, 320, 1440);
+
+    font-family: "Bebas", sans-serif;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0.96px;
+}
+
 .buttonBigText {
     @include adaptiveFont(18, 22, 320, 1440);
 
@@ -181,6 +190,7 @@ a {
 .title-animation {
     display: inline-block;
     transform: translateY(100%);
+    transition: transform 1s;
 
     &[data-queue="1"] {
         transition-delay: 0ms;
@@ -224,7 +234,7 @@ a {
 
     &--isIntersecting {
         transform: translateY(0%);
-        transition: all 1s;
+        transition: transform 1s;
     }
 }
 
@@ -238,10 +248,9 @@ a {
     }
 }
 
-@media (max-width: 1020px) {
+@media (max-width: 1125px) {
     .container {
         padding: 0 $container1020-offset;
-        max-width: $container-width;
     }
 }
 
