ADD: form & MANY FIXED

--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -7,3 +7,6 @@
 @import "../modules/services/services";
 @import "../modules/portfolio/portfolio";
 @import "../modules/reasons/reasons";
+@import "../modules/form/form";
+@import "../modules/form/choose";
+@import "../modules/popup/popup";
