--- a/src/views/index.html
+++ b/src/views/index.html
@@ -50,6 +50,7 @@
     <body class="body">
         @include('../modules/preloader/preloader.html')
         @include('../modules/nav/nav.html')
+        @include('../modules/popup/popup.html')
         <div id="scroll" class="scroll">
             @include('../modules/header/header.html')
             <main class="main">
@@ -57,6 +58,7 @@
                 @include('../modules/services/services.html')
                 @include('../modules/portfolio/portfolio.html')
                 @include('../modules/reasons/reasons.html')
+                @include('../modules/form/form.html')
             </main>
         </div>
 
