ADD: discount block

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -66,6 +66,7 @@
                 @include('../modules/about/about.html')
                 @include('../modules/services/services.html')
                 @include('../modules/portfolio/portfolio.html')
+                @include('../modules/discount/discount.html')
                 @include('../modules/reasons/reasons.html')
                 @include('../modules/form/form.html')
             </main>
