--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -2,6 +2,7 @@
     padding-top: 110px;
 
     &__item {
+        border-radius: 8px;
         padding: 48px;
         width: 100%;
         background-color: $grey;
