--- a/src/modules/popup/popup.scss
+++ b/src/modules/popup/popup.scss
@@ -130,6 +130,31 @@
             height: 30px;
         }
     }
+
+    &__grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 24px;
+    }
+
+    &__certificate {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 24px 48px;
+
+        h2 {
+            margin-bottom: 12px;
+            color: $violet;
+        }
+
+        p {
+            margin-bottom: 12px;
+            text-align: center;
+            color: $white;
+        }
+    }
 }
 
 .open {
@@ -187,5 +212,11 @@
         &__twoPicture {
             flex-direction: column;
         }
+    }
+}
+
+@media (max-width: 1099px) {
+    .popup__grid {
+        grid-template-columns: 1fr;
     }
 }
