--- a/src/views/index.html
+++ b/src/views/index.html
@@ -51,6 +51,7 @@
     <body class="body">
         @include('../modules/preloader/preloader.html')
         @include('../modules/nav/nav.html')
+        @include('../modules/popup/CertificatePopup.html')
         @include('../modules/popup/holdMyCodePopup.html')
         @include('../modules/popup/winePopup.html')
         @include('../modules/popup/FourCAPopup.html')
