--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,7 +46,7 @@
 
         <link rel="preload" href="js/import/preloader.js" as="script">
         <link rel="stylesheet" href="css/style.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     </head>
     <body class="body">
         @include('../modules/preloader/preloader.html')
