--- a/src/modules/discount/discount.scss
+++ b/src/modules/discount/discount.scss
@@ -1,21 +1,21 @@
 .discount {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 110px;
-    padding-top: 48px;
-    padding-bottom: 48px;
-    background-color: $violet;
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 48px 0;
+        background-color: $violet;
 
-    h2 {
-        margin-bottom: 48px;
-        text-align: center;
-    }
+        h2 {
+            margin-bottom: 48px;
+            text-align: center;
+        }
 
-    p {
-        width: 50%;
-        text-align: center;
+        p {
+            width: 50%;
+            text-align: center;
+        }
     }
 }
 
