ADD: start stages

--- a/src/modules/about/_tabs.scss
+++ b/src/modules/about/_tabs.scss
@@ -7,6 +7,14 @@
         margin-bottom: 32px;
     }
 
+    &__resume {
+        display: flex;
+
+        span {
+            margin-left: 12px;
+        }
+    }
+
     &__item {
         text-transform: uppercase;
         color: $white;
