--- a/src/views/index.html
+++ b/src/views/index.html
@@ -72,6 +72,7 @@
                 @include('../modules/reviews/reviews.html')
                 @include('../modules/discount/discount.html')
                 @include('../modules/reasons/reasons.html')
+                @include('../modules/stages/stages.html')
                 @include('../modules/form/form.html')
             </main>
         </div>
