--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -11,4 +11,5 @@
 @import "../modules/reasons/reasons";
 @import "../modules/form/form";
 @import "../modules/form/choose";
+@import "../modules/stages/stages";
 @import "../modules/popup/popup";
