--- a/src/modules/stages/stages.scss
+++ b/src/modules/stages/stages.scss
@@ -1,5 +1,10 @@
 .stages {
+    position: relative;
+    overflow: hidden;
+
     &__wrapper {
+        position: relative;
+        z-index: 5;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -45,23 +50,50 @@
                 transition: opacity 0.2s;
 
                 &[data-queue="1"] {
-                    transition-delay: 1.4s;
+                    transition-delay: 0.9s;
                 }
 
                 &[data-queue="2"] {
-                    transition-delay: 1.6s;
+                    transition-delay: 1.1s;
                 }
 
                 &[data-queue="3"] {
-                    transition-delay: 1.8s;
+                    transition-delay: 1.3s;
                 }
 
                 &[data-queue="4"] {
-                    transition-delay: 2s;
+                    transition-delay: 1.5s;
                 }
 
                 &[data-queue="5"] {
-                    transition-delay: 2.2s;
+                    transition-delay: 1.7s;
+                }
+            }
+
+            &[data-stage="acquaintance"] {
+                rect {
+                    opacity: 1;
+                    transition: opacity 0.2s;
+
+                    &[data-queue="1"] {
+                        transition-delay: 1.4s;
+                    }
+
+                    &[data-queue="2"] {
+                        transition-delay: 1.6s;
+                    }
+
+                    &[data-queue="3"] {
+                        transition-delay: 1.8s;
+                    }
+
+                    &[data-queue="4"] {
+                        transition-delay: 2s;
+                    }
+
+                    &[data-queue="5"] {
+                        transition-delay: 2.2s;
+                    }
                 }
             }
         }
@@ -87,7 +119,199 @@
 
         &--isActive {
             opacity: 1;
-            transition-delay: 1s;
+            transition-delay: 0.5s;
+
+            &[data-stage="acquaintance"] {
+                transition-delay: 1s;
+            }
         }
+    }
+
+    &__svg {
+        position: absolute;
+        z-index: 4;
+        pointer-events: none;
+        user-select: none;
+
+        &[data-position="top-left"] {
+            left: 0;
+            top: 0;
+            width: 70%;
+            transform: translateY(10%);
+            animation: left-top-stage 10s ease infinite;
+        }
+
+        &[data-position="top-right"] {
+            right: 0;
+            top: 0;
+            width: 70%;
+            animation: right-top-stage 10s ease infinite;
+        }
+
+        &[data-position="middle-left"] {
+            left: 0;
+            top: 50%;
+            width: 70%;
+            transform: translateY(-50%);
+            animation: left-middle-stage 10s ease infinite;
+        }
+
+        &[data-position="middle-right"] {
+            right: 0;
+            top: 50%;
+            width: 70%;
+            transform: translateY(-50%);
+            animation: right-middle-stage 10s ease infinite;
+        }
+
+        &[data-position="bottom-left"] {
+            left: 0;
+            top: 100%;
+            width: 70%;
+            transform: translateY(-100%);
+            animation: left-bottom-stage 10s ease infinite;
+        }
+
+        &[data-position="bottom-right"] {
+            right: 0;
+            top: 100%;
+            width: 70%;
+            transform: translateY(-100%);
+            animation: right-bottom-stage 10s ease infinite;
+        }
+    }
+}
+
+@media (max-width: 960px) {
+    .stages {
+        &__relative {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &__text {
+            position: static;
+            width: 100%;
+            text-align: center !important;
+            transform: translateY(0) !important;
+        }
+
+        &__svg {
+            width: 100% !important;
+
+            &[data-position="bottom-right"] {
+                top: 106%;
+            }
+        }
+
+        h4 {
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 490px) {
+    .stages__svg {
+        &[data-position="bottom-right"] {
+            top: 110%;
+        }
+
+        &[data-position="middle-right"] {
+            top: 60%;
+        }
+
+        &[data-position="middle-left"] {
+            top: 45%;
+        }
+
+        &[data-position="top-right"] {
+            top: -10%;
+        }
+    }
+}
+
+@keyframes left-top-stage {
+    0% {
+        transform: scale(1) translateY(10%);
+    }
+
+    50% {
+        transform: scale(1.2) translateY(5%);
+    }
+
+    100% {
+        transform: scale(1) translateY(10%);
+    }
+}
+
+@keyframes right-top-stage {
+    0% {
+        transform: scale(1) translate(0%);
+    }
+
+    50% {
+        transform: scaleX(1.2) translate(10%, -5%);
+    }
+
+    100% {
+        transform: scale(1) translate(0%);
+    }
+}
+
+@keyframes left-middle-stage {
+    0% {
+        transform: scale(1) translate(0%, -50%);
+    }
+
+    50% {
+        transform: scale(1.2) translate(-10%, -50%);
+    }
+
+    100% {
+        transform: scale(1) translate(0%, -50%);
+    }
+}
+
+@keyframes right-middle-stage {
+    0% {
+        transform: scale(1) translate(0%, -50%);
+    }
+
+    50% {
+        transform: scaleX(1.2) translate(15%, -50%);
+    }
+
+    100% {
+        transform: scale(1) translate(0%, -50%);
+    }
+}
+
+@keyframes left-bottom-stage {
+    0% {
+        transform: scale(1) translate(0%, -100%);
+    }
+
+    50% {
+        transform: scale(1.2) translate(-10%, -85%);
+    }
+
+    100% {
+        transform: scale(1) translate(0%, -100%);
+    }
+}
+
+@keyframes right-bottom-stage {
+    0% {
+        transform: scale(1) translate(0%, -100%);
+    }
+
+    50% {
+        transform: scaleX(1.2) translate(15%, -90%);
+    }
+
+    100% {
+        transform: scale(1) translate(0%, -100%);
     }
 }
