FIX: slider / stages / about

--- a/src/modules/reviews/reviews.scss
+++ b/src/modules/reviews/reviews.scss
@@ -115,6 +115,7 @@
         &-inner {
             flex-direction: column;
             align-items: flex-start;
+            padding: 0 10px;
         }
 
         &-slide {
