--- a/src/modules/discount/discount.scss
+++ b/src/modules/discount/discount.scss
@@ -4,7 +4,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 48px 0;
+        padding-top: 48px;
+        padding-bottom: 48px;
         background-color: $violet;
 
         h2 {
