--- a/src/modules/stages/stages.scss
+++ b/src/modules/stages/stages.scss
@@ -72,9 +72,6 @@
 
             &[data-stage="acquaintance"] {
                 rect {
-                    opacity: 1;
-                    transition: opacity 0.2s;
-
                     &[data-queue="1"] {
                         transition-delay: 1.4s;
                     }
@@ -213,21 +210,84 @@
 }
 
 @media (max-width: 490px) {
-    .stages__svg {
-        &[data-position="bottom-right"] {
-            top: 110%;
+    .stages {
+        &__wrapper {
+            padding: 36px 10px;
         }
 
-        &[data-position="middle-right"] {
-            top: 60%;
+        &__svg {
+            &[data-position="bottom-right"] {
+                top: 110%;
+            }
+
+            &[data-position="middle-right"] {
+                top: 60%;
+            }
+
+            &[data-position="middle-left"] {
+                top: 45%;
+            }
+
+            &[data-position="top-right"] {
+                top: -10%;
+            }
         }
 
-        &[data-position="middle-left"] {
-            top: 45%;
-        }
+        &__way {
+            max-height: 70px;
 
-        &[data-position="top-right"] {
-            top: -10%;
+            rect {
+                width: 1px;
+                height: 16px;
+
+                &:nth-child(1) {
+                    y: 7px;
+                }
+
+                &:nth-child(3) {
+                    y: 30px;
+                }
+
+                &:nth-child(5) {
+                    y: 52px;
+                }
+
+                &:nth-child(even) {
+                    display: none;
+                }
+            }
+
+            &--isActive {
+                rect {
+                    &[data-queue="1"] {
+                        transition-delay: 0.9s;
+                    }
+
+                    &[data-queue="3"] {
+                        transition-delay: 1.1s;
+                    }
+
+                    &[data-queue="5"] {
+                        transition-delay: 1.3s;
+                    }
+                }
+
+                &[data-stage="acquaintance"] {
+                    rect {
+                        &[data-queue="1"] {
+                            transition-delay: 1.4s;
+                        }
+
+                        &[data-queue="3"] {
+                            transition-delay: 1.6s;
+                        }
+
+                        &[data-queue="5"] {
+                            transition-delay: 1.8s;
+                        }
+                    }
+                }
+            }
         }
     }
 }
