--- a/src/scss/_modules.scss
+++ b/src/scss/_modules.scss
@@ -12,4 +12,5 @@
 @import "../modules/form/form";
 @import "../modules/form/choose";
 @import "../modules/stages/stages";
+@import "../modules/faq/faq";
 @import "../modules/popup/popup";
