--- a/src/views/index.html
+++ b/src/views/index.html
@@ -74,6 +74,7 @@
                 @include('../modules/reasons/reasons.html')
                 @include('../modules/stages/stages.html')
                 @include('../modules/form/form.html')
+                @include('../modules/faq/faq.html')
             </main>
         </div>
 
