--- a/src/modules/faq/faq.scss
+++ b/src/modules/faq/faq.scss
@@ -1,4 +1,6 @@
 .faq {
+    padding-bottom: 110px;
+
     &__wrapper {
         margin-top: 48px;
     }
@@ -16,6 +18,10 @@
 
         .text20 {
             color: #C2C2C2;
+        }
+
+        .h4 {
+            user-select: none;
         }
 
         &:focus {
@@ -43,7 +49,7 @@
         }
 
         &-isNonFirstText {
-            padding-top: 12px;
+            margin-top: 12px;
         }
 
         &-isActive {
