--- a/src/modules/services/services.scss
+++ b/src/modules/services/services.scss
@@ -1,17 +1,10 @@
 .services {
     &__item {
+        margin-top: 24px;
         border-radius: 8px;
         padding: 48px;
         width: 100%;
         background-color: $grey;
-
-        &:not(:first-of-type) {
-            margin-top: 24px;
-        }
-
-        &:first-of-type {
-            margin-top: 48px !important;
-        }
 
         h3 {
             margin-bottom: 16px;
@@ -86,6 +79,10 @@
                 cursor: pointer;
             }
         }
+    }
+
+    h2 {
+        margin-bottom: 48px;
     }
 }
 
